[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "think-sql"
version = "0.7.6"
description = "ThinkSQL link think-orm(ThinkPHP)"
authors = [ "hbh112233abc <hbh112233abc@163.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hbh112233abc/think-sql"
repository = "https://github.com/hbh112233abc/think-sql"
documentation = "https://github.com/hbh112233abc/think-sql"
keywords = [ "sql", "think-sql", "DB", "Table", "mysql","达梦"]
[[tool.poetry.source]]
name = "pypi.tuna.tsinghua.edu.cn"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cacheout = "^0.15.0"
jsonpath = "^0.82.2"
loguru = "^0.7.2"
dill = "^0.3.7"
pydantic = "^2.5.2"
redis = "^5.0.3"
pymysql = {version="^1.1.0", optional = true }
sql-metadata = {version="^2.10.0", optional = true }
tabulate = {version="^0.9.0", optional = true }
sqlparse = {version="^0.4.4", optional = true }
dmpython = {version="^2.5.5", optional = true }

[tool.poetry.extras]
mysql = ["pymysql","sqlparse","sql-metadata","tabulate"]
dm = ["dmpython"]
all = ["pymysql","sqlparse","sql-metadata","tabulate","dmpython"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
line-profiler = "^4.1.2"
memory-profiler = "^0.61.0"
